# mixin

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: 01_mixin_simple_test.rs  02_mixin_multi_test.rs  03_mixin_inherit_test.rs  04_simple_impl_test.rs  05_impl_trait_test.rs  06_trait_with_generic_test.rs  07_trait_type_test.rs  08_repeat_field_in_mixin.rs  09_impl_get_set_for_mixin.rs  10_with_serde_attribute_macro.rs  11_mixin_enum_test.rs
